ADD IHM Commande

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}"/>
     <meta charset="UTF-8">
-    <title>Gestion des articles</title>
+    <title>Article</title>
 </head>
 <body>
 <h1>Gestion des articles</h1>
