--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,5 +1,5 @@
 /* Réinitialisation des styles de base */
-body, h1, h2, h3, h4, h5, h6, p,form, input, label {
+body, h1, h2, h3, h4, h5, h6, p,form, input, label, button, a {
     margin: 0;
     padding: 0;
     border: 0;
@@ -17,6 +17,15 @@ body, h1, h2, h3, h4, h5, h6, p,form, input, label {
 
 body {
     padding: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+button {
+    margin-bottom: 20px;
 }
 
 /* Style pour l'en-tête */
@@ -62,7 +71,7 @@ input[type="radio"] {
     margin-right: 5px;
 }
 
-input[type="submit"] {
+input[type="submit"], button {
     background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
@@ -72,7 +81,7 @@ input[type="submit"] {
     transition: background-color 0.3s ease;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover, button:hover {
     background-color: #0056b3;
 }
 
