--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -21,8 +21,10 @@ body {
 
 a {
     text-decoration: none;
-    color: #fff;
+    /*color: #fff;*/
 }
+
+
 
 button {
     margin-bottom: 20px;
@@ -98,6 +100,10 @@ span {
     border-radius: 5px;
     margin-bottom: 10px;
     background: lightseagreen;
+}
+
+.btn {
+    color: black;
 }
 
 /* Ajoute d'autres styles si nécessaire */
