--- a/src/main/resources/templates/nouvelle_commande.html
+++ b/src/main/resources/templates/nouvelle_commande.html
@@ -29,10 +29,7 @@
         </span>
         <a class="btn" th:href="@{/commande/nouvelle_commande/supprimer_article/{id}(id=${ligneCommande.getKey().idArticle})}">[X]</a>
         </li>
-
     </ul>
-
-<!--            <span th:if="${#fields.hasErrors('articles')}" th:errors="${commande.articles}"></span>-->
 </div>
 
 <!--/*@thymesVar id="commande" type="fr.eni.tppanier.bo.Commande"*/-->
@@ -40,6 +37,7 @@
     <label for="adresse">Adresse</label>
     <input type="text" id="adresse" th:field="*{adresse}">
             <span th:if="${#fields.hasErrors('adresse')}" th:errors="*{adresse}"/>
+            <span th:if="${#fields.hasErrors('panier')}" th:errors="*{panier}"/>
     <br>
 
     <input type="submit" value="Valider">
